--- a/app/assets/stylesheets/partials/utils/_vars.scss
+++ b/app/assets/stylesheets/partials/utils/_vars.scss
@@ -201,7 +201,7 @@ $color-light-txt: #777 !default;
 $color-med-txt: #42444d !default;
 
 /* Dark text color */
-$color-dark-txt: #292a2e !default;
+$color-dark-txt: #242424 !default;
 
 /* Off white */
 $color-off-white: #f2f2f2 !default;
