--- a/app/assets/stylesheets/partials/abstractions/_divider.scss
+++ b/app/assets/stylesheets/partials/abstractions/_divider.scss
@@ -13,7 +13,7 @@
 
 .divider {
 	border-bottom: 1px solid $color-grey;
-	box-shadow: 0 1px 0 $color-grey-lightest;
+	box-shadow: 0 1px 0 $color-grey-1;
 	@include to-rem(padding-bottom, $spacing-base);
 	@extend %mrg-base;
 }
