--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -17,7 +17,7 @@
 
         <%# Filters %>
         <%# [CHRIS TODO] need to add `aria-owns` to the 'Apply' button that points to the filters count %>
-        <div class="drop-down-menu drop-down-container">
+        <!-- <div class="drop-down-menu drop-down-container">
           <button class="drop-down-menu__trigger btn btn--main btn--main-alt2 btn--pointer btn--pointer-padding-lrg" toggle-visibility="stores-filters">Category<span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full icon--flush-top btn--pointer__icon"></span></button>
           <div class="drop-down-menu__target drop-down box" id="stores-filters">
             <ul class="drop-down-menu__list">
@@ -29,7 +29,7 @@
               <li><button class="btn btn--full btn--full-left">Movies &amp; Music</button></li>
             </ul>
           </div>
-        </div>
+        </div> -->
         <%# Filters %>
 
         <%# List/map toggle %>
