--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -49,7 +49,7 @@
 </script>
 <%# //Back button %>
 
-<div ng-controller="ProductBrowseController" ng-init="bootstrap()" class="ng-cloak filters">
+<div ng-controller="ProductBrowseController" ng-init="bootstrap()" class="ng-cloak filters filters--pin-board">
 
   <h2 class="hide-visually">Filters</h2>
 
