Rework nav-contextual and centre-selector

--- a/app/assets/stylesheets/partials/layout/_containers.scss
+++ b/app/assets/stylesheets/partials/layout/_containers.scss
@@ -26,3 +26,6 @@
 
 /* Dark container */
 .container--dark {background: $color-med-txt;}
+
+/* Position relative container */
+.container--position {position: relative;}
