--- a/app/assets/stylesheets/partials/modules/_nav-contextual.scss
+++ b/app/assets/stylesheets/partials/modules/_nav-contextual.scss
@@ -3,53 +3,53 @@
 */
 .nav-contextual {
   position: relative;
+}
 
-  /* Scroll the contents of the navigation when the viewport is narrow enough */
-  nav {
-    overflow: scroll;
-    -webkit-overflow-scrolling: touch;
-
-    @include respond-min($palm) {overflow: hidden;}
+  /* Clip scrollable contents (palm) */
+  .nav-contextual__clip {
+    @include to-rem(margin-right, $spacing-base +  $spacing-base);
   }
-}
 
-/* Clip scrollable contents (palm) */
-.nav-contextual__clip {
-  position: relative;
-
-  @include to-rem(margin-right, $spacing-base +  $spacing-base);
-  @include to-rem(padding-right, 20);
-}
-
-/* Holds menus items and sets container to be wide-enough that they are horiz aligned */
-.nav-contextual__main-items {
-  width: 250%; /* magic number */
-  > li {@include to-rem(margin-right, $spacing-base);}
-}
-
-  .nav-contextual__main-items > li a {
-    @include to-rem(padding-top padding-bottom, $spacing-half);
-
-    @include respond-min($non-palm) {
-      @include to-rem(padding-top padding-bottom, $spacing-base);
+    /* Scroll the contents of the navigation when the viewport is narrow enough */
+    .nav-contextual__clip-inner {
+      overflow-x: scroll;
+      -webkit-overflow-scrolling: touch;
     }
 
-    border-bottom: 2px solid transparent;
+  /* List of nav items */
+  .nav-contextual__list {
+    /* Sets container to be wide-enough that they are horiz aligned. Just a magic number */
+    width: 250%;
 
-    &.is-active {
-      border-bottom-color: $color-brand;
+    > li {@include to-rem(margin-right, $spacing-base);}
+  }
+
+    .nav-contextual__list > li a {
+      @include to-rem(padding-top padding-bottom, $spacing-half);
+
+      @include respond-min($non-palm) {
+        @include to-rem(padding-top padding-bottom, $spacing-base);
+      }
+
+      border-bottom: 2px solid transparent;
+
+      &.is-active {
+        border-bottom-color: $color-brand;
+      }
     }
-  }
 
-  .nav-contextual__show-more {
-    @include respond-min($palm) {display: none;}
+    /* Background */
+    .nav-contextual__overlay {
+      position: absolute;
+      top: 0;
+      right: 0;
+      @include to-rem(padding-top padding-bottom, $spacing-third);
+      @include to-rem(padding-left, $spacing-base +  $spacing-base);
 
-    position: absolute;
-    right: 0;
-    @include to-rem(top, 7); // half height
-    @include to-rem(padding-left, $spacing-base +  $spacing-base);
-
-  }
+      @include respond-min($non-palm) {
+        @include to-rem(padding-top padding-bottom, $spacing-base - 4);
+      }
+    }
 
 /* --Extenders-- */
 
@@ -59,20 +59,18 @@
   a {
     color: $color-light-txt;
 
-    &:hover {color:#fff;}
+    &:hover,
+    &:focus {color: #fff;}
   }
 
-  .nav-contextual__main-items > li a {
+  .nav-contextual__list > li a {
     &.is-active {
       color: #fff;
     }
   }
 
-    .nav-contextual__show-more {
+    .nav-contextual__overlay {
       color: $color-light-txt;
-      //TODO: other prefixes
-      // background: -webkit-linear-gradient(left, rgba($color-med-txt, 0) 0%, rgba($color-med-txt, 1) 100%);
-      // background: -webkit-linear-gradient(left, rgba($color-med-txt, 0) 0%, rgba($color-med-txt, 1) 50%);
       @include linear-gradient($from: rgba($color-med-txt, 0) 0%, $to: rgba($color-med-txt, 1) 50%, $dir: right, $override-bg-color: false, $bg-color-override: "")
     }
 }
