--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
 
 	<%= render "/layouts/header" %>
 	<main class="main <%= yield(:class_for_main) %>" id="main" role="main">
-		<%= yield :nav_contextual %>
+		<%= yield :section_nav %>
 		<div class="container">
 			<%= yield %>
 		</div>
