--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,5 @@
-<% content_for :nav_contextual do %>
-  <%= render '/layouts/nav_contextual' %>
+<% content_for :section_nav do %>
+  <%= render '/layouts/section_nav' %>
 <% end %>
 
 <h1 class="hide-visually">Products</h1>
