--- a/app/assets/stylesheets/partials/utils/placeholders/_arrows.scss
+++ b/app/assets/stylesheets/partials/utils/placeholders/_arrows.scss
@@ -14,7 +14,7 @@
 */
 
 /* Set variables */
-$arrow-size: $spacing-half !default;
+$arrow-size: $spacing-third !default;
 
 $arrow-border: 1 !default;
 
